<resources>
    <string name="app_name">Cancanvas</string>
    <string name="api_base_url">https://cancanvas-backend.herokuapp.com/query</string>
    <string name="api_subscription_url">wss://cancanvas-backend.herokuapp.com/query</string>
    <string name="feed">Feed</string>
    <string name="following">Following</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email_example">your@email.com</string>
    <string name="nickname_example">your_nickname</string>
    <string name="name_example">Your Name</string>
    <string name="password_example">p***word</string>
    <string name="repeat_password_example">p***word (again)</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="account_created">Account created!</string>
    <string name="login_succeeded">Login succeeded!</string>
    <string name="inform_nickname">Please inform your nickname</string>
    <string name="inform_name">Please inform your name</string>
    <string name="inform_email">Please inform your email address</string>
    <string name="inform_password">Please inform your password</string>
    <string name="password_min_length">The password must have a minimum length of 6 characters</string>
    <string name="inform_confirm_password">Please confirm your password</string>
    <string name="passwords_dont_match">The informed passwords don\'t match</string>
    <string-array name="pelicanvas_dialog">
        <item>Oi! Hello there. My name is Pelicanvas, a very respected artist.</item>
        <item>What? You\'ve never heard of me? That\'s rubbish! Are you that unlearned?</item>
        <item>Anyways, I know you\'re probably thinking that I\'ll explain everything to you, but fortunately, I won\'t have to.</item>
        <item>The developers are really chuffed about how this app is intuitive and yada yada yada… So I\'ll let it with them.</item>
        <item>But just in case it isn\'t reeeally like that, I\'ll be on the chat section if you need some help.</item>
        <item>Anyways, being you a professional, an aspirant or someone who\'s planning to splash out on some good arts, you\'re welcome!</item>
        <item>Don\'t forget to call me on the chat section so we can have a good old chinwag.</item>
        <item>Farewell, mate.</item>
    </string-array>
    <string-array name="pelicanvas_sprites">
        <item>@drawable/pelicanvas_idle</item>
        <item>@drawable/pelicanvas_angry</item>
        <item>@drawable/pelicanvas_serious</item>
        <item>@drawable/pelicanvas_confident</item>
        <item>@drawable/pelicanvas_confused</item>
        <item>@drawable/pelicanvas_idle</item>
        <item>@drawable/pelicanvas_confident</item>
        <item>@drawable/pelicanvas_serious</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="name_sample">Harold H.</string>
    <string name="bio_sample">\"Meu gato pôs um ovo, mas gato não põe ovo.\"</string>
    <string name="nickname_sample">\@hidethepain</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ago">ago</string>
    <string name="second">second</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="follow">Follow</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="comments">Comments</string>
    <string name="edit_bio">Tell me how you are feeling this wonderful day.</string>
    <string name="bio_example">I am feeling very well, sir, thank you for asking. You are such a gentleman.</string>
    <string name="bid">An artist of culture, I see. Tell me, do you plan to counteroffer this proposal?</string>
    <string name="hello_example">Hello, sir.</string>
    <string name="search_example">fractal art</string>
    <string name="search">Search</string>
    <string name="tags">Please, choose the tags that suit you the most.</string>
    <string name="artist_location">Artist Location</string>
    <string name="load_map_failed">Map loading failed.</string>
    <string name="post">What kind of masterpiece will you post today?</string>
    <string name="post_example">This is the description of my masterpiece.</string>
    <string name="update_bio">Update Bio</string>
    <string name="location_denied">Please allow the location permission if you want to see your location in the profile screen</string>
    <string name="gallery_denied">Without this permission, you will not be able to create new posts, update your profile picture or update your cover</string>
    <string name="select_image">Select an image</string>
    <string name="post_created">Post created</string>
    <string name="post_failed">Failed to create post</string>
    <string name="bio_updated">Bio updated!</string>
    <string name="bio_update_failed">Failed to update bio.</string>
</resources>
