<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context=".view.activity.EditBioActivity"
    tools:deviceIds="wear">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="10dp"
        android:tint="?attr/colorPrimary"
        app:srcCompat="@drawable/ic_left" />

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/bid"
        android:textAlignment="center"
        android:textSize="20sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivPelicanvas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/pelicanvas_idle"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="?attr/colorAccent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etComment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hello_example"
                android:inputType="textMultiLine" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                android:tint="?attr/colorAccent"
                app:backgroundTint="?attr/colorPrimary"
                app:fabCustomSize="50dp"
                app:maxImageSize="30dp"
                app:srcCompat="@drawable/send" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>