<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bnvFeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/cover_sample" />

                    <ImageView
                        android:id="@+id/ivCover"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/gradient" />

                    <ImageView
                        android:id="@+id/ivEditCover"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:tint="@color/colorAccentLight"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_pencil" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </FrameLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="-50dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/dummy_profile" />

                    <ImageView
                        android:id="@+id/ivGradient"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="0"
                        android:visibility="gone"
                        app:srcCompat="@drawable/profile_gradient" />

                    <ImageView
                        android:id="@+id/ivEditProfile"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="5dp"
                        android:tint="@color/colorAccentLight"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_pencil" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_sample"
                    android:textAlignment="center"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/tvNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:text="@string/nickname_sample"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/bio_sample"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="?attr/colorSecondary"
                        android:textStyle="italic" />

                    <ImageView
                        android:id="@+id/ivEditBio"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:tint="?attr/colorPrimary"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_pencil" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvChat"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        app:cardBackgroundColor="?attr/colorPrimary"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/ivChat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:tint="?android:attr/colorBackground"
                            app:srcCompat="@drawable/ic_comment" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvFollow"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        app:cardBackgroundColor="?attr/colorPrimary"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/ivFollow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:tint="?android:attr/colorBackground"
                            app:srcCompat="@drawable/star" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorAccent"
                android:orientation="vertical">

                <fragment
                    android:id="@+id/tsTags"
                    android:name="studios.eaemenkk.cancanvas.view.fragments.TagSelectionFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:searchable="true"
                    app:selectable="false" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/gallery"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="25sp" />

                <androidx.gridlayout.widget.GridLayout
                    android:id="@+id/glGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.gridlayout.widget.GridLayout>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/location"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="25sp" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    tools:context=".MapsActivity" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnvFeed"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="?android:attr/colorBackground"
        android:translationZ="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/feed_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>